--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,18 @@ android {
 
 dependencies {
 
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+    debugImplementation "androidx.fragment:fragment-testing:1.4.1"
+
+    testImplementation "androidx.test.ext:unit:1.1.2"
+    testImplementation "androidx.test:runner:1.3.0"
+    testImplementation "androidx.test:core:1.3.0"
+    testImplementation "androidx.test:rules:1.3.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation "androidx.test:core:1.3.0"
+    androidTestImplementation "androidx.test:rules:1.3.0"
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -39,6 +51,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation  'org.robolectric:robolectric:4.4'
+    testImplementation  'org.mockito:mockito-core:2.19.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    debugImplementation "androidx.fragment:fragment-testing:1.4.1"
 }
